# cpp-project-template

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
